--- a/src/style.scss
+++ b/src/style.scss
@@ -1,28 +1,42 @@
-.ant-skeleton-image{
+.ant-skeleton-image {
   width: 300px !important;
   height: 160px !important;
   border-radius: 0 !important;
 }
 
-.ant-skeleton-button-sm{
+.ant-skeleton-button-sm {
   height: 32px;
   min-height: 32px;
   width: 32px !important;
   min-width: 32px !important;
 }
 
-.ant-skeleton-paragraph >li{
+.ant-skeleton-paragraph > li {
   border-radius: 0 !important;
 }
-.ant-skeleton-paragraph >li +li{
+.ant-skeleton-paragraph > li + li {
   margin-block-start: 8px !important;
 }
 
 .ant-skeleton-avatar {
   width: 48px !important;
-  border-radius: 4px !important;  
+  border-radius: 4px !important;
 }
 
-body, html {
-  overflow-y: hidden;
+body,
+html {
+  overflow: hidden;
+}
+
+.story-scroll {
+  overflow-y: auto;
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #666;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: #fff;
+  }
 }
